--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -1,12 +1,53 @@
-p {
-    margin: 0;
-    padding: 0;
+
+body {
+    background-color: #FBFFF1;
+    color: #342838;
 }
 
-button {
-    display: block;
+
+p {
+    margin: 10px 0;
+    font-size: 2rem;
 }
 
 .hidden {
     display: none;
+}
+
+div {
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
+
+label {
+    font-size: 2.6rem;
+}
+
+button {
+    display: block;
+    padding: 10px 15px;
+    margin-top: 25px;
+    background-color: #E7C411;
+    border-radius: 6px;
+    font-size: 1.7rem;
+
+    &:hover,
+    &:focus {
+        background-color: #A77B14;
+        box-shadow: -5px 5px 2px 0px rgba(0, 0, 0, 0.75);
+    }
+}
+
+.results {
+    padding-top: 100px;
+    max-width: 500px;
+    margin: 0 auto;
+}
+
+footer {
+    button {
+        margin: 0 auto;
+    }
 }
