alpha site live

--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -1,3 +1,11 @@
 header {
     text-align: center;
+    h1 {
+        font-size: 5rem;
+    }
+
+    p {
+        max-width: 800px;
+        margin: 0 auto;
+    }
 }
