final commit, i think :p

--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -2,16 +2,47 @@
 body {
     background-color: #FBFFF1;
     color: #342838;
+    text-align: center;
+}
+
+h1,
+h2 {
+    font-family: 'Cinzel', serif;
+}
+
+h2 {
+    font-size: 2rem;
+    text-align: center;
 }
 
 
 p {
     margin: 10px 0;
     font-size: 2rem;
+    font-family: 'Assistant', sans-serif;
+}
+
+label,
+input {
+    font-family: 'Assistant', sans-serif;
+    padding-top: 10px;
+}
+
+a {
+    text-transform: capitalize;
+    text-decoration: none;
+
+    &:hover,
+    &:focus {
+        color: #E7C411;
+        font-size: 2.1rem;
+    }
 }
 
 .hidden {
     display: none;
+    color: #342838;
+
 }
 
 div {
@@ -32,6 +63,7 @@ button {
     background-color: #E7C411;
     border-radius: 6px;
     font-size: 1.7rem;
+    text-transform: capitalize;
 
     &:hover,
     &:focus {
