--- a/styles/partials/_header.scss
+++ b/styles/partials/_header.scss
@@ -9,3 +9,11 @@ header {
         margin: 0 auto;
     }
 }
+
+@media (max-width:500px) {
+    header {
+        h1 {
+            font-size: 4rem;
+        }
+    }
+}
