--- a/styles/styles/style.css
+++ b/styles/styles/style.css
@@ -258,6 +258,7 @@ p {
   margin: 10px 0;
   font-size: 2rem;
   font-family: 'Assistant', sans-serif;
+  padding: 8px 0;
 }
 
 label,
@@ -311,6 +312,10 @@ button:hover, button:focus {
   padding-top: 100px;
   max-width: 500px;
   margin: 0 auto;
+}
+
+footer {
+  padding: 20px 0;
 }
 
 footer button {
