--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -1,4 +1,5 @@
 
+// font and text styles 
 body {
     background-color: #FBFFF1;
     color: #342838;
@@ -29,6 +30,7 @@ input {
     padding-top: 10px;
 }
 
+// link styles 
 a {
     text-transform: capitalize;
     text-decoration: none;
@@ -40,12 +42,14 @@ a {
     }
 }
 
+// hidden class to hid question html when appropriate 
 .hidden {
     display: none;
     color: #342838;
 
 }
 
+// global div styles 
 div {
     margin-top: 50px;
     display: flex;
@@ -57,6 +61,7 @@ label {
     font-size: 2.6rem;
 }
 
+// global button styles start
 button {
     display: block;
     padding: 10px 15px;
@@ -73,6 +78,7 @@ button {
     }
 }
 
+// final results styles 
 .results {
     padding-top: 100px;
     max-width: 500px;
