--- a/styles/styles/style.css
+++ b/styles/styles/style.css
@@ -239,14 +239,14 @@ html {
 }
 
 body {
-  background-color: #FBFFF1;
+  background-color: #fbfff1;
   color: #342838;
   text-align: center;
 }
 
 h1,
 h2 {
-  font-family: 'Cinzel', serif;
+  font-family: "Cinzel", serif;
 }
 
 h2 {
@@ -254,16 +254,22 @@ h2 {
   text-align: center;
 }
 
+h3 {
+  font-weight: normal;
+  font-family: "Assistant", sans-serif;
+  font-size: 2.3rem;
+}
+
 p {
   margin: 10px 0;
   font-size: 2rem;
-  font-family: 'Assistant', sans-serif;
+  font-family: "Assistant", sans-serif;
   padding: 8px 0;
 }
 
 label,
 input {
-  font-family: 'Assistant', sans-serif;
+  font-family: "Assistant", sans-serif;
   padding-top: 10px;
 }
 
@@ -273,7 +279,7 @@ a {
 }
 
 a:hover, a:focus {
-  color: #E7C411;
+  color: #e7c411;
   font-size: 2.1rem;
 }
 
@@ -297,14 +303,14 @@ button {
   display: block;
   padding: 10px 15px;
   margin-top: 25px;
-  background-color: #E7C411;
+  background-color: #e7c411;
   border-radius: 6px;
   font-size: 1.7rem;
   text-transform: capitalize;
 }
 
 button:hover, button:focus {
-  background-color: #A77B14;
+  background-color: #a77b14;
   box-shadow: -5px 5px 2px 0px rgba(0, 0, 0, 0.75);
 }
 
@@ -331,7 +337,7 @@ header h1 {
 }
 
 header p {
-  max-width: 800px;
+  max-width: 650px;
   margin: 0 auto;
 }
 
