--- a/styles/partials/_global.scss
+++ b/styles/partials/_global.scss
@@ -28,28 +28,58 @@ p {
     padding: 8px 0;
 }
 
-label,
-input {
+label {
     font-family: "Assistant", sans-serif;
-    padding-top: 10px;
+    text-transform: capitalize;
+    font-size: 2.6rem;
+    padding: 20px 10px;
+    margin: 20px 0;
+    border-radius: 21px;
+    border: 2px solid #d3c5a6;
+    background: linear-gradient(145deg, #ffe246, #d9be3b);
+    
+    &:hover {
+        box-shadow: 6px 6px 2px 0.7px;
+
+    }
+}
+
+input {
+    opacity: 0;
+
+    &:focus {
+        +label {
+            // color: #935ba5;
+            box-shadow: 6px 6px 2px 0.7px;
+        }
+    }
+}
+
+input[type="radio"]:checked + label {
+    border-radius: 21px;
+    background: linear-gradient(145deg, #8f7809, #aa900e);
+    box-shadow: 4px 4px 0.9px;
 }
 
 // link styles
 a {
     text-transform: capitalize;
     text-decoration: none;
+    font-weight: 700;
+
+    &:visited {
+        color: inherit;
+    }
 
     &:hover,
     &:focus {
         color: #e7c411;
-        font-size: 2.1rem;
     }
 }
 
 // hidden class to hid question html when appropriate
 .hidden {
     display: none;
-    color: #342838;
 }
 
 // global div styles
@@ -60,24 +90,20 @@ div {
     flex-direction: column;
 }
 
-label {
-    font-size: 2.6rem;
-}
-
 // global button styles start
 button {
     display: block;
     padding: 10px 15px;
     margin-top: 25px;
-    background-color: #e7c411;
-    border-radius: 6px;
-    font-size: 1.7rem;
+    font-size: 2.5rem;
     text-transform: capitalize;
+    border-radius: 10px;
+    background: linear-gradient(145deg, #f7d212, #d0b00f);
 
     &:hover,
     &:focus {
-        background-color: #a77b14;
-        box-shadow: -5px 5px 2px 0px rgba(0, 0, 0, 0.75);
+        background: linear-gradient(145deg, #d0b00f, #f7d212);
+        box-shadow: 5px 5px 2px 0px rgba(0, 0, 0, 0.75);
     }
 }
 
@@ -89,12 +115,12 @@ button {
 }
 
 // reset button styles start
-footer {
-    padding: 20px 0;
-
-    button {
-        margin: 0 auto;
-    }
+.cta4 {
+    margin: 0 auto;
 }
 
 // reset button styles end
+
+footer {
+    padding: 20px 0;
+}
